fix `<pre>` tag alignment

--- a/arabic.css
+++ b/arabic.css
@@ -2,7 +2,6 @@
 	--nc-font-sans: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 	--nc-font-mono: Consolas, monaco, 'Ubuntu Mono', 'Liberation Mono', 'Courier New', Courier, monospace;
 
-	/* Light theme */
 	--nc-tx-1: #000000;
 	--nc-tx-2: #1A1A1A;
 	--nc-bg-1: #FFFFFF;
@@ -20,7 +19,6 @@
 	margin: 0;
 	padding: 0;
 	direction: rtl;
-	text-align: right;
 }
 
 address,
@@ -164,17 +162,7 @@ header {
 	padding: 2rem 1.5rem;
 	
 	/* This sets the right and left margins to cancel out the body's margins. It's width is still the same, but the background stretches across the page's width. */
-
 	margin: -2rem calc(50% - 50vw) 2rem;
-
-	/* Shorthand for:
-
-	margin-top: -2rem;
-	margin-bottom: 2rem;
-
-	margin-left: calc(50% - 50vw);
-	margin-right: calc(50% - 50vw); */
-
 	padding-left: calc(50vw - 50%);
 	padding-right: calc(50vw - 50%);
 }
@@ -274,7 +262,7 @@ pre {
 	padding: 1rem 1.4rem;
 	max-width: 100%;
 	overflow: auto;
-	text-align: left;
+	direction: ltr;
 }
 
 pre code {
